--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "inquirer": "^8.2.0",
-    "pg": "^8.12.0"
-  },
-  "name": "e-commerce-orm",
+  "name": "module-13-challenge-orm",
   "version": "1.0.0",
-  "description": "A back end for an e-commerce site.",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "start": "node server.js",
+    "watch": "nodemon server.js",
+    "seed": "node seeds/index.js"
   },
-  "author": "Joshua Collado",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.3"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "pg": "^8.11.3",
+    "sequelize": "^6.37.3"
+  }
 }
